# dl-engineering-onboarding

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: AI_TOOLS.md  DECISIONS.md  HANDOFF.md  PYTHON_ENV.md  TASKS.md  TESTING.md  WORKFLOW.md
docs/reports/: phase1_classification_stack.md
scripts/: checkpointing_lab.py  dataloader_lab.py  evaluation_lab.py  fashion_cnn_lab.py  fashion_error_analysis_lab.py  fashion_experiment_lab.py  fashion_inference_lab.py  fashion_mnist_lab.py  fashion_model_comparison_lab.py  fashion_train_val_test_lab.py  manual_training_lab.py  module_training_lab.py  optimizer_training_lab.py  quality_check.sh  tensor_autograd_lab.py  tensorboard_lab.py  verify_torch.py
src/dl_onboarding/: __init__.py  checkpointing.py  data_loading.py  evaluation.py  experiment_logging.py  fashion_mnist.py  inference.py  manual_training.py  module_training.py  system_info.py  tensor_lab.py
tests/: test_checkpointing.py  test_data_loading.py  test_evaluation.py  test_experiment_logging.py  test_fashion_mnist.py  test_inference.py  test_manual_training.py  test_module_training.py  test_optimizer_training.py  test_system_info.py  test_tensor_lab.py
